--- a/Roomie/Components/Pages/Rooms.razor
+++ b/Roomie/Components/Pages/Rooms.razor
@@ -2,6 +2,7 @@
 @rendermode InteractiveServer
 @attribute [StreamRendering(true)]
 @using System.Collections.Generic
+@using Amazon.DynamoDBv2.DataModel
 @using Roomie.Domain
 @using Roomie.Services
 
@@ -50,9 +51,16 @@ else
                         <td>@room.PricePerNight</td>
                         <td>@room.MaxPeople</td>
                         <td>
-                            <a href="@($"book/{building.Id}/{room.Number}")" class="btn btn-outline-primary btn-sm mb-1">
-                                Book
-                            </a>
+                            @if(bookings.Any((x) => x.BuildingId == building.Id && x.RoomNumber == room.Number))
+                            {
+                                <button class="btn btn-secondary" disabled>Already booked</button>
+                            }
+                            else
+                            {
+                                <a href="@($"book/{building.Id}/{room.Number}")" class="btn btn-outline-primary btn-sm mb-1">
+                                    Book
+                                </a>
+                            }
                         </td>
                     </tr>
                 }
@@ -63,11 +71,16 @@ else
 
 @code {
     private List<Building> buildings = default!;
+    private List<Booking> bookings = default!;
+
+    [Inject]
+    public IDynamoDBContext Context { get; set; } = default!;
 
     protected override async Task OnInitializedAsync()
     {
-        await Task.Delay(2000);
+        bookings = await Context.ScanAsync<Booking>(default).GetRemainingAsync();
         await base.OnInitializedAsync();
-        buildings = new MockDataService().Buildings;
+        var mockDataService = new MockDataService();
+        buildings = mockDataService.Buildings;
     }
 }
