--- a/Roomie/Components/Pages/Home.razor
+++ b/Roomie/Components/Pages/Home.razor
@@ -2,6 +2,14 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="bg-image d-flex flex-column align-items-center justify-content-center text-center"
+     style="
+    background-image: url('/Images/saratceline.png');
+    height: 100vh;
+  ">
+    <h1 style="color: black">Welcome to Our Wedding Room Booking Service!</h1>
+    <h2 style="color: black"> We're delighted to have you here. </h2>
+    <a href="@($"rooms/")" class="btn btn-primary btn-lg">
+        Book a room
+    </a>
+</div>
