Improve email template and layout of pages, add ability to select and edit booking days, add custom font, change images of Sarat and Celine

--- a/Roomie/Components/Layout/Header.razor
+++ b/Roomie/Components/Layout/Header.razor
@@ -1,9 +1,6 @@
-﻿<div class="bg-image d-flex flex-column align-items-center justify-content-center text-center"
-     style="
-    background-image: url('/Images/saratceline.png');
-    height: 200px;
-  ">
-    <a href="@($"/")">
+﻿<div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
+     style="background-image: url('/Images/celine_sarat_header.jpg');">
+    <a href="@($"/")" class="elegant-font" style="text-decoration: none; color:white">
         <h1>Celine & Sarat wedding</h1>
     </a>
 </div>
