--- a/Roomie/wwwroot/app.css
+++ b/Roomie/wwwroot/app.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'ElegantFont';
+    src: url('/fonts/SourceSerif4-Italic-VariableFont_opsz,wght.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+.elegant-font {
+    font-style: italic;
+    font-family: 'ElegantFont'
+}
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
